--- a/life_expectancy_gdp.ipynb
+++ b/life_expectancy_gdp.ipynb
@@ -18,13 +18,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "        * To analyze data from the World Health Organization to identify the relationship between GDP and Life Expectancy.\n",
-    "        * Additionally, through analyzing data, answer questions about additional relationships:\n",
-    "            ** What is the average life expectancy in each country?\n",
-    "            ** At what GDP does a countries life expectancy exceed the average?\n",
-    "            ** If GDP increases or decreases, in a country with low life expectancy, how quickly does the life expectancy change?\n",
-    "            ** If GDP decreases or increases, in a country with high life expectancy, how quickly does the life expectancy change?\n",
-    "            ** Can we draw conclusions about future life expectancies based on historical trends in GDP?"
+    "* To analyze data from the World Health Organization to identify the relationship between GDP and Life Expectancy.\n",
+    "* Additionally, through analyzing data, answer questions about additional relationships:\n",
+    "  * What is the average life expectancy in each country?\n",
+    "  * At what GDP does a countries life expectancy exceed the average?\n",
+    "  * If GDP increases or decreases, in a country with low life expectancy, how quickly does the life expectancy change?\n",
+    "  * If GDP decreases or increases, in a country with high life expectancy, how quickly does the life expectancy change?\n",
+    "  * Can we draw conclusions about future life expectancies based on historical trends in GDP?"
    ]
   },
   {
@@ -124,10 +124,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 96 entries, 0 to 95\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column                          Non-Null Count  Dtype  \n",
+      "---  ------                          --------------  -----  \n",
+      " 0   country                         96 non-null     object \n",
+      " 1   year                            96 non-null     int64  \n",
+      " 2   life_expectancy_at_birth_years  96 non-null     float64\n",
+      " 3   gdp                             96 non-null     float64\n",
+      "dtypes: float64(2), int64(1), object(1)\n",
+      "memory usage: 3.1+ KB\n",
+      "None\n",
+      "  country  year  life_expectancy_at_birth_years           gdp\n",
+      "0   Chile  2000                            77.3  7.786093e+10\n",
+      "1   Chile  2001                            77.3  7.097992e+10\n",
+      "2   Chile  2002                            77.8  6.973681e+10\n",
+      "3   Chile  2003                            77.9  7.564346e+10\n",
+      "4   Chile  2004                            78.0  9.921039e+10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Clean data set\n",
+    "## Normalize Column Names\n",
+    "gdp_le_data.columns = (gdp_le_data.columns.str.strip().str.lower().str.replace(' ', '_').str.replace('(', '', regex=False).str.replace(')', '', regex=False))\n",
+    "                       \n",
+    "## Ensure numeric columns are properly formatted\n",
+    "gdp_le_data['gdp'] = pd.to_numeric(gdp_le_data['gdp'], errors='coerce')\n",
+    "gdp_le_data['life_expectancy_at_birth_years'] = pd.to_numeric(gdp_le_data['life_expectancy_at_birth_years'], errors='coerce')\n",
+    "\n",
+    "# Verify Cleaning\n",
+    "print(gdp_le_data.info())\n",
+    "print(gdp_le_data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Beginning Visualization and Analysis\n"
+   ]
   }
  ],
  "metadata": {
