File Pathway Corrections
Actually corrected file pathways, all updates registering real-time. Confirmed fixed.

--- a/life_expectancy_gdp-Copy1.ipynb
+++ b/life_expectancy_gdp-Copy1.ipynb
@@ -11,40 +11,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Objective:"
+    "## Overview:\n",
+    "    This project involves:\n",
+    "        1. Using the provided data set on GDP and life expectancy for six countries.\n",
+    "        2. Data cleaning and preperation for analysis.\n",
+    "        3. Statistical analysis and visualization to explore the relationship between GDP and life expectancy.\n",
+    "        4. Preparation of a blog post summarizing findings and insights."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Hypothesis:\n",
+    "     Life Expectancy is directly related to GDP ."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Objective:\n",
+    "\n",
     "* To analyze data from the World Health Organization to identify the relationship between GDP and Life Expectancy.\n",
     "* Additionally, through analyzing data, answer questions about additional relationships:\n",
     "  * What is the average life expectancy in each country?\n",
     "  * At what GDP does a countries life expectancy exceed the average?\n",
     "  * If GDP increases or decreases, in a country with low life expectancy, how quickly does the life expectancy change?\n",
     "  * If GDP decreases or increases, in a country with high life expectancy, how quickly does the life expectancy change?\n",
-    "  * Can we draw conclusions about future life expectancies based on historical trends in GDP?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Overview:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Hypothesis:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "  * Can we draw conclusions about future life expectancies based on historical trends in GDP?\n",
+    "\n",
     "### Findings:"
    ]
   },
@@ -96,34 +93,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Average Life expectancy across all countries is: 72.78958333333334\n",
-      "The Max Life Expectancy across all countries is: 81.0\n",
-      "The Minimum Life Expectancy across all countries is: 44.3\n",
-      "The Average GDP across all countries is: 3880498570768.396\n",
-      "The Max GDP across all countries is: 18100000000000.0\n",
-      "The Minimum GDP across all countries is: 4415702800.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Find Summary Statistics\n",
-    "print(\"The Average Life expectancy across all countries is: \" + str(np.mean(gdp_le_data['Life expectancy at birth (years)'])))\n",
-    "print(\"The Max Life Expectancy across all countries is: \" + str(np.max(gdp_le_data['Life expectancy at birth (years)'])))\n",
-    "print(\"The Minimum Life Expectancy across all countries is: \" + str(np.min(gdp_le_data['Life expectancy at birth (years)'])))\n",
-    "print(\"The Average GDP across all countries is: \" + str(np.mean(gdp_le_data['GDP'])))\n",
-    "print(\"The Max GDP across all countries is: \" + str(np.max(gdp_le_data['GDP'])))\n",
-    "print(\"The Minimum GDP across all countries is: \" + str(np.min(gdp_le_data['GDP'])))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [
@@ -164,6 +133,41 @@
     "# Verify Cleaning\n",
     "print(gdp_le_data.info())\n",
     "print(gdp_le_data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Average Life expectancy across all countries is: 72.78958333333334\n",
+      "The Max Life Expectancy across all countries is: 81.0\n",
+      "The Minimum Life Expectancy across all countries is: 44.3\n",
+      "The Average GDP across all countries is: 3880498570768.396\n",
+      "The Max GDP across all countries is: 18100000000000.0\n",
+      "The Minimum GDP across all countries is: 4415702800.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find Summary Statistics\n",
+    "print(\"The Average Life expectancy across all countries is: \" + str(np.mean(gdp_le_data['life_expectancy_at_birth_years'])))\n",
+    "print(\"The Max Life Expectancy across all countries is: \" + str(np.max(gdp_le_data['life_expectancy_at_birth_years'])))\n",
+    "print(\"The Minimum Life Expectancy across all countries is: \" + str(np.min(gdp_le_data['life_expectancy_at_birth_years'])))\n",
+    "print(\"The Average GDP across all countries is: \" + str(np.mean(gdp_le_data['gdp'])))\n",
+    "print(\"The Max GDP across all countries is: \" + str(np.max(gdp_le_data['gdp'])))\n",
+    "print(\"The Minimum GDP across all countries is: \" + str(np.min(gdp_le_data['gdp'])))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* As we can see, the difference between the highest and lowest data in each column is vast. The averages for each column also appear to be shifted closer to the max, possibly indicating that there is a smaller amount of data points closer to the low end of the data."
    ]
   },
   {
